...
            "state": "new",
            "value": "About"
          }
        }
      }
    },
    "About Inkwell": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "new",
            "value": "About Inkwell"
          }
...
            "state": "new",
            "value": "Content Warnings"
          }
        }
      }
    },
    "Continue": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "new",
            "value": "Continue"
          }
...
            "state": "new",
            "value": "Documents"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "new",
            "value": "Done"
          }
...
